# bazel-run-commit

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  build_and_hash.sh
.github/workflows/: main.yml
